objects/SOA2TransactionDetails__c.object
<CustomObject>
    <description>Object is used to store the transaction information that is used to search PDF files. (Its created as a part of SOA Ph2)</description>
    <fields>
        <fullName>Accessed_by_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accessed by Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Sent_Date__c</fullName>
        <label>Communication Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Communication_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communication Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doc_No_URL__c</fullName>
        <formula>HYPERLINK(&apos;/apex/SOA2OpenpdfFile?docId=&apos;+ Transaction_No__c ,Transaction_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_No__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Doc Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mail_Sent__c</fullName>
        <formula>IF(NOT(Communication_Sent__c) &amp;&amp;  CreatedDate  &gt;= Partner__r.Subscription_Date__c &amp;&amp; Now() -  CreatedDate  &gt;= 0 &amp;&amp; Now() - CreatedDate &lt;=30, 1,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mail Sent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SOA2TransactionDetails</relationshipLabel>
        <relationshipName>SOA2TransactionDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Time_Diff__c</fullName>
        <formula>DATEVALUE(CreatedDate) - Transaction_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_No__c</fullName>
        <label>Transaction No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Memo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Memo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SOA2TransactionDetail</label>
    <nameField>
        <displayFormat>TR-{0000000000}</displayFormat>
        <label>Transaction No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOA2TransactionDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>